# consbri

./: Makefile  README.md  configure.ac  consbri.c
doc/: Makefile.am  consbri.1
src/: Makefile.am  consbri.c
