AC_PREREQ([2.60])
AC_INIT([consbri],
        [1.0.0],
        [coder@kyleisom.net],
        [consbri],
        [https://bitbucket.org/kisom/consbri])
AM_INIT_AUTOMAKE([1.11 foreign])
AC_CONFIG_SRCDIR([src/consbri.c])
AC_CHECK_HEADERS
AC_CANONICAL_HOST
AC_CONFIG_FILE([Makefile src/Makefile])
AC_OUTPUT
